Refactor popup script: remove unnecessary HTML structure and ensure job fetching is triggered on load for better user experience

--- a/popup.html
+++ b/popup.html
@@ -115,19 +115,6 @@ jobSearchInput.addEventListener("keypress", (e) => {
   }
 });
 
-</script>
-
-</body>
-</html><!DOCTYPE html>
-<html lang="en">  
-  <head>  
-    <meta charset="UTF-8">  
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">  
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">  
-    <title>Codeium Test</title>  
-  </head>  
-  <body>  
-    <h1>Codeium Test</h1>  
-    <p>Hello, Codeium!</p>  
-  </body>  
-</html>
+fetchRemoteJobs();
+fetchLocalJobs(countrySelect.value);  
+</script> 
