--- a/popup.html
+++ b/popup.html
@@ -1,120 +1,112 @@
-console.log("Popup loaded ✅");
-
-const viewJobsBtn = document.getElementById("viewJobsBtn");
-const welcomeScreen = document.getElementById("welcome-screen");
-const jobBoard = document.getElementById("job-board");
-const remoteJobsDiv = document.getElementById("remote-jobs");
-const localJobsDiv = document.getElementById("local-jobs");
-const countrySelect = document.getElementById("country-select");
-const jobSearchInput = document.getElementById("job-search");
-const searchBtn = document.getElementById("search-btn");
-
-// --- API CONFIG ---
-const ADZUNA_APP_ID = "b39ca9ec";
-const ADZUNA_APP_KEY = "d8f3335fc89f05e7a577c1cc468eebf1";
-
-// --- FETCH REMOTE JOBS ---
-async function fetchRemoteJobs(search = "") {
-  try {
-    console.log("🌍 Fetching remote jobs for:", search);
-    const response = await fetch(
-      `https://remotive.com/api/remote-jobs?search=${encodeURIComponent(search)}`
-    );
-    const data = await response.json();
-
-    remoteJobsDiv.innerHTML = "";
-    if (!data.jobs || data.jobs.length === 0) {
-      remoteJobsDiv.innerHTML = "<p>No remote jobs found.</p>";
-      return;
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Global Inter-Connect Jobs</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      width: 350px;
+      padding: 10px;
     }
-
-    data.jobs.slice(0, 10).forEach(job => {
-      const jobDiv = document.createElement("div");
-      jobDiv.className = "job";
-      jobDiv.innerHTML = `
-        <strong>${job.title}</strong><br>
-        ${job.company_name} – ${job.candidate_required_location}<br>
-        <a href="${job.url}" target="_blank">Apply Now</a>
-      `;
-      remoteJobsDiv.appendChild(jobDiv);
-    });
-  } catch (error) {
-    console.error("Error fetching remote jobs:", error);
-    remoteJobsDiv.innerHTML = "<p>⚠️ Failed to load remote jobs.</p>";
-  }
-}
-
-// --- FETCH LOCAL JOBS ---
-async function fetchLocalJobs(country = "us", search = "") {
-  try {
-    console.log("📍 Fetching local jobs in", country, "for:", search);
-    const response = await fetch(
-      `https://api.adzuna.com/v1/api/jobs/${country}/search/1?app_id=${ADZUNA_APP_ID}&app_key=${ADZUNA_APP_KEY}&results_per_page=10&what=${encodeURIComponent(search)}`
-    );
-    if (!response.ok) throw new Error("Failed to fetch Adzuna jobs.");
-    const data = await response.json();
-
-    localJobsDiv.innerHTML = "";
-    if (!data.results || data.results.length === 0) {
-      localJobsDiv.innerHTML = "<p>No local jobs found.</p>";
-      return;
+    #welcome-screen, #job-board {
+      text-align: center;
     }
+    button {
+      padding: 10px 20px;
+      margin: 10px 0;
+      background-color: #007bff;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    button:disabled {
+      background-color: #ccc;
+      cursor: not-allowed;
+    }
+    #job-list {
+      max-height: 200px;
+      overflow-y: auto;
+      text-align: left;
+      margin-top: 10px;
+    }
+    .job {
+      border-bottom: 1px solid #ddd;
+      padding: 8px 0;
+    }
+    .job a {
+      display: inline-block;
+      margin-top: 4px;
+      color: #007bff;
+      text-decoration: none;
+    }
+    .job a:hover {
+      text-decoration: underline;
+    }
+    #search-bar {
+      margin: 10px 0;
+    }
+    #job-search {
+      width: 65%;
+      padding: 5px;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+    }
+    #search-btn {
+      padding: 6px 12px;
+    }
+    select {
+      margin: 8px 0;
+      padding: 5px;
+      border-radius: 5px;
+    }
+  </style>
+</head>
+<body>
+  <!-- Welcome screen -->
+  <div id="welcome-screen">
+    <h2>🌍 Welcome to Global Inter-Connect Jobs</h2>
+    <p>Find remote and local opportunities worldwide.</p>
+    <button id="viewJobsBtn">Get Started</button>
+  </div>
 
-    data.results.forEach(job => {
-      const jobDiv = document.createElement("div");
-      jobDiv.className = "job";
-      jobDiv.innerHTML = `
-        <strong>${job.title}</strong><br>
-        ${job.company.display_name} – ${job.location.display_name}<br>
-        <a href="${job.redirect_url}" target="_blank">Apply Now</a>
-      `;
-      localJobsDiv.appendChild(jobDiv);
-    });
-  } catch (error) {
-    console.error("Error fetching local jobs:", error);
-    localJobsDiv.innerHTML = "<p>⚠️ Failed to load local jobs.</p>";
-  }
-}
+  <!-- Job board -->
+  <div id="job-board" style="display:none;">
+    <h2>Job Listings</h2>
 
-// --- SEARCH FUNCTION ---
-function triggerSearch() {
-  const searchTerm = jobSearchInput.value.trim();
-  console.log("🔍 TriggerSearch called | Term:", `"${searchTerm}"`, "| Country:", countrySelect.value);
+    <!-- Country selector -->
+    <label for="country-select">Choose Country:</label>
+    <select id="country-select">
+      <option value="us" selected>United States</option>
+      <option value="gb">United Kingdom</option>
+      <option value="ca">Canada</option>
+      <option value="au">Australia</option>
+      <option value="de">Germany</option>
+      <option value="fr">France</option>
+      <option value="es">Spain</option>
+      <option value="it">Italy</option>
+      <option value="nl">Netherlands</option>
+      <option value="se">Sweden</option>
+      <option value="no">Norway</option>
+    </select>  
 
-  fetchRemoteJobs(searchTerm);
-  fetchLocalJobs(countrySelect.value, searchTerm);
-}
+    <!-- Search bar -->
+    <div id="search-bar">
+      <input type="text" id="job-search" placeholder="Search for jobs">
+      <button id="search-btn">Search</button>
+    </div>
 
-// --- EVENT LISTENERS ---
-viewJobsBtn.addEventListener("click", () => {
-  console.log("✅ Get Started button clicked");
-  welcomeScreen.style.display = "none";
-  jobBoard.style.display = "block";
+    <!-- Remote jobs -->
+    <h3>🌍 Remote Jobs</h3>
+    <div id="remote-jobs"><p>Start a search to see results here.</p></div>
 
-  // initial fetch
-  fetchRemoteJobs();
-  fetchLocalJobs(countrySelect.value);
-});
+    <!-- Local jobs -->
+    <h3>📍 Local Jobs</h3>
+    <div id="local-jobs"><p>Start a search to see results here.</p></div>
+  </div>
 
-countrySelect.addEventListener("change", () => {
-  console.log("🌎 Country changed:", countrySelect.value);
-  triggerSearch();
-});
-
-searchBtn.addEventListener("click", (e) => {
-  e.preventDefault();
-  console.log("🔘 Search button clicked");
-  triggerSearch();
-});
-
-jobSearchInput.addEventListener("keypress", (e) => {
-  if (e.key === "Enter") {
-    e.preventDefault();
-    console.log("⏎ Enter pressed in search box");
-    triggerSearch();
-  }
-});
-
-fetchRemoteJobs();
-fetchLocalJobs(countrySelect.value);  
-</script> 
+  <script src="popup.js"></script>
+</body>
+</html>
