--- a/popup.html
+++ b/popup.html
@@ -10,7 +10,7 @@
       width: 350px;
       padding: 10px;
     }
-    #welcomeScreen, #jobScreen {
+    #welcome-screen, #job-board {
       text-align: center;
     }
     button {
@@ -48,8 +48,8 @@
     #search-bar {
       margin: 10px 0;
     }
-    #jobTitleInput {
-      width: 65%;
+    #job-search {
+      width: 90%;
       padding: 5px;
       border-radius: 5px;
       border: 1px solid #ccc;
@@ -60,7 +60,6 @@
       border-radius: 5px;
     }
     #loading {
-      display: none;
       margin: 10px 0;
       font-style: italic;
       color: #555;
@@ -69,19 +68,19 @@
 </head>
 <body>
   <!-- Welcome screen -->
-  <div id="welcomeScreen">
+  <div id="welcome-screen">
     <h2>🌍 Welcome to Global Inter-Connect Jobs</h2>
     <p>Find remote and local opportunities worldwide.</p>
     <button id="viewJobsBtn">Get Started</button>
   </div>
 
   <!-- Job board -->
-  <div id="jobScreen" style="display:none;">
+  <div id="job-board" style="display:none;">
     <h2>Job Listings</h2>
 
     <!-- Country selector -->
-    <label for="countrySelect">Choose Country:</label>
-    <select id="countrySelect">
+    <label for="country-select">Choose Country:</label>
+    <select id="country-select">
       <option value="us" selected>United States</option>
       <option value="gb">United Kingdom</option>
       <option value="ca">Canada</option>
@@ -91,48 +90,39 @@
       <option value="es">Spain</option>
       <option value="it">Italy</option>
       <option value="nl">Netherlands</option>
-      <option value="se">Sweden</option>
-      <option value="no">Norway</option>
       <option value="br">Brazil</option>
-      <option value="mx">Mexico</option>
+      <option value="za">South Africa</option>
+      <option value="pl">Poland</option>
+      <option value="ru">Russia</option>
       <option value="in">India</option>
       <option value="sg">Singapore</option>
-      <option value="za">South Africa</option>
-      <option value="ae">United Arab Emirates</option>
-      <option value="jp">Japan</option>
-      <option value="cn">China</option>
-      <option value="ch">Switzerland</option>
       <option value="be">Belgium</option>
-      <option value="at">Austria</option>
-      <option value="dk">Denmark</option>
-      <option value="fi">Finland</option>
-      <option value="ie">Ireland</option>
+      <option value="ch">Switzerland</option>
+      <option value="mx">Mexico</option>
       <option value="nz">New Zealand</option>
     </select>  
 
     <!-- Search bar -->
     <div id="search-bar">
-      <input type="text" id="jobTitleInput" placeholder="Search for jobs">
-      <button id="searchBtn">Search</button>
+      <input type="text" id="job-search" placeholder="Search for jobs">
     </div>
 
     <!-- Loading spinner/message -->
-    <div id="loading">🔄 Searching for jobs...</div>
+    <div id="loading" style="display:none;">Searching jobs...</div>
 
-    <!-- Job list -->
-    <div id="job-list">
-      <h3>🌐 Remote Jobs</h3>
-      <ul id="remoteJobs"></ul>
+    <!-- Remote jobs -->
+    <h3>🌍 Remote Jobs</h3>
+    <div id="remote-jobs"></div>
 
-      <h3>📍 Local Jobs</h3>
-      <ul id="localJobs"></ul>
-    </div>
+    <!-- Local jobs -->
+    <h3>📍 Local Jobs</h3>
+    <div id="local-jobs"></div>
   </div>
 
-  <!-- External script -->
   <script src="popup.js"></script>
 </body>
 </html>
+
 
 
 
