Refactor saved jobs functionality: add saved counter display, update limit logic, and enhance job listing structure for better user experience

--- a/popup.html
+++ b/popup.html
@@ -67,6 +67,11 @@
       font-style: italic;
       color: gray;
     }
+    #saved-counter {
+      margin-bottom: 10px;
+      font-weight: bold;
+      color: #333;
+    }
   </style>
 </head>
 <body>
@@ -123,6 +128,7 @@
   <!-- Saved Jobs Screen -->
   <div id="saved-jobs-screen" style="display:none;">
     <h2>⭐ Saved Jobs</h2>
+    <div id="saved-counter"></div>
     <div id="saved-jobs-list"></div>
     <div class="nav-buttons">
       <button id="backToJobsBtn">⬅️ Back to Listings</button>
@@ -132,6 +138,7 @@
   <script src="popup.js"></script>
 </body>
 </html>
+
 
 
 
