--- a/popup.html
+++ b/popup.html
@@ -7,15 +7,15 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      width: 350px;
+      width: 380px;
       padding: 10px;
     }
     #welcome-screen, #job-board {
       text-align: center;
     }
     button {
-      padding: 8px 14px;
-      margin: 5px 0;
+      padding: 8px 16px;
+      margin: 6px 0;
       background-color: #007bff;
       color: white;
       border: none;
@@ -27,7 +27,7 @@
       cursor: not-allowed;
     }
     #job-list {
-      max-height: 200px;
+      max-height: 220px;
       overflow-y: auto;
       text-align: left;
       margin-top: 10px;
@@ -35,15 +35,10 @@
     .job {
       border-bottom: 1px solid #ddd;
       padding: 8px 0;
+      cursor: pointer;
     }
-    .job a {
-      display: inline-block;
-      margin-top: 4px;
-      color: #007bff;
-      text-decoration: none;
-    }
-    .job a:hover {
-      text-decoration: underline;
+    .job:hover {
+      background: #f7f7f7;
     }
     #search-bar {
       margin: 10px 0;
@@ -59,31 +54,57 @@
       padding: 5px;
       border-radius: 5px;
     }
-    /* --- Modal Styles --- */
-    #job-modal {
-      display: none;
-      position: fixed;
-      z-index: 999;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0,0,0,0.6);
-    }
-    #modal-content {
-      background: white;
-      margin: 10% auto;
-      padding: 20px;
-      border-radius: 8px;
-      width: 90%;
-      max-width: 400px;
+    #saved-jobs-section {
+      margin-top: 15px;
+      border-top: 2px solid #ddd;
+      padding-top: 10px;
       text-align: left;
     }
-    #modal-close {
-      float: right;
+    .saved-job {
+      padding: 6px 0;
+      border-bottom: 1px solid #eee;
+    }
+    .delete-btn {
+      margin-left: 8px;
+      color: red;
       cursor: pointer;
+      font-size: 12px;
+    }
+    #loading-message {
+      margin: 10px 0;
+      font-style: italic;
+      color: gray;
+    }
+
+    /* Modal */
+    .modal {
+      display: none;
+      position: fixed;
+      z-index: 9999;
+      left: 0; top: 0;
+      width: 100%; height: 100%;
+      background: rgba(0,0,0,0.5);
+      justify-content: center;
+      align-items: center;
+    }
+    .modal-content {
+      background: #fff;
+      padding: 15px;
+      border-radius: 8px;
+      width: 90%;
+      max-height: 80%;
+      overflow-y: auto;
+      text-align: left;
+    }
+    .modal-header {
       font-size: 18px;
-      font-weight: bold;
+      margin-bottom: 10px;
+    }
+    .close-btn {
+      float: right;
+      font-size: 18px;
+      cursor: pointer;
+      color: #333;
     }
   </style>
 </head>
@@ -118,35 +139,39 @@
     <!-- Search bar -->
     <div id="search-bar">
       <input type="text" id="job-search" placeholder="Search for jobs">
-      <button id="searchBtn">Search</button>
+      <button id="search-btn">Search</button>
     </div>
+
+    <!-- Loading message -->
+    <div id="loading-message" style="display:none;">Searching jobs...</div>
 
     <!-- Job list -->
     <div id="job-list">
-      <h3>🌍 Remote Jobs</h3>
+      <h3>🌐 Remote Jobs</h3>
       <div id="remote-jobs"></div>
       <h3>📍 Local Jobs</h3>
       <div id="local-jobs"></div>
     </div>
+
+    <!-- Saved jobs -->
+    <div id="saved-jobs-section">
+      <h3>💾 Saved Jobs (<span id="saved-jobs-counter">0/4 this month</span>)</h3>
+      <div id="saved-jobs-list"></div>
+    </div>
   </div>
 
   <!-- Job Modal -->
-  <div id="job-modal">
-    <div id="modal-content">
-      <span id="modal-close">&times;</span>
-      <h3 id="modal-title"></h3>
-      <p><strong>Company:</strong> <span id="modal-company"></span></p>
-      <p><strong>Location:</strong> <span id="modal-location"></span></p>
-      <p id="modal-description"></p>
-      <a id="modal-link" href="#" target="_blank">Apply Now</a>
-      <br><br>
-      <button id="modal-save-btn">Save Job</button>
+  <div id="job-modal" class="modal">
+    <div class="modal-content">
+      <span class="close-btn">&times;</span>
+      <div id="modal-body"></div>
     </div>
   </div>
 
   <script src="popup.js"></script>
 </body>
 </html>
+
 
 
 
