--- a/popup.html
+++ b/popup.html
@@ -1,80 +1,158 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Job Finder</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Global Inter-Connect Jobs</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      width: 400px;
+      width: 380px;
       padding: 10px;
     }
-    #job-board {
-      display: none;
+    #welcome-screen, #job-board {
+      text-align: center;
+    }
+    button {
+      padding: 8px 16px;
+      margin: 6px 0;
+      background-color: #007bff;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    button:disabled {
+      background-color: #ccc;
+      cursor: not-allowed;
+    }
+    #job-list {
+      max-height: 220px;
+      overflow-y: auto;
+      text-align: left;
+      margin-top: 10px;
     }
     .job {
-      border-bottom: 1px solid #ccc;
+      border-bottom: 1px solid #ddd;
       padding: 8px 0;
+      cursor: pointer;
     }
-    .job strong {
-      font-size: 14px;
+    .job:hover {
+      background: #f7f7f7;
     }
+    #search-bar {
+      margin: 10px 0;
+    }
+    #job-search {
+      width: 90%;
+      padding: 5px;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+    }
+    select {
+      margin: 8px 0;
+      padding: 5px;
+      border-radius: 5px;
+    }
+    #saved-jobs-section {
+      margin-top: 15px;
+      border-top: 2px solid #ddd;
+      padding-top: 10px;
+      text-align: left;
+    }
+    .saved-job {
+      padding: 6px 0;
+      border-bottom: 1px solid #eee;
+    }
+    .delete-btn {
+      margin-left: 8px;
+      color: red;
+      cursor: pointer;
+      font-size: 12px;
+    }
+    #loading-message {
+      margin: 10px 0;
+      font-style: italic;
+      color: gray;
+    }
+
+    /* Modal */
     .modal {
       display: none;
       position: fixed;
-      z-index: 1000;
+      z-index: 9999;
       left: 0; top: 0;
       width: 100%; height: 100%;
-      overflow: auto;
-      background-color: rgba(0,0,0,0.5);
+      background: rgba(0,0,0,0.5);
+      justify-content: center;
+      align-items: center;
     }
     .modal-content {
       background: #fff;
-      margin: 10% auto;
-      padding: 20px;
-      border-radius: 10px;
+      padding: 15px;
+      border-radius: 8px;
       width: 90%;
-      max-width: 500px;
-    }
-    .close {
-      float: right;
-      font-size: 20px;
-      font-weight: bold;
-      cursor: pointer;
-    }
-    #saved-jobs-counter {
-      font-size: 12px;
-      color: #555;
-      margin-top: 5px;
-    }
-    #search-history {
-      margin-top: 8px;
+      max-height: 80%;
+      overflow-y: auto;
       text-align: left;
     }
-    #search-history ul {
-      list-style: none;
-      padding-left: 0;
-      margin: 4px 0;
+    .modal-header {
+      font-size: 18px;
+      margin-bottom: 10px;
     }
-    #search-history li button {
-      background: none;
-      border: none;
-      color: #007bff;
+    .close-btn {
+      float: right;
+      font-size: 18px;
       cursor: pointer;
-      padding: 0;
-      font-size: 13px;
+      color: #333;
+    }
+
+    /* Search history */
+    #search-history {
+      margin-top: 10px;
+      text-align: left;
+    }
+    .history-item {
+      display: inline-block;
+      background: #f1f1f1;
+      border-radius: 12px;
+      padding: 4px 8px;
+      margin: 3px;
+      font-size: 12px;
+      cursor: pointer;
+    }
+    .history-item:hover {
+      background: #e0e0e0;
     }
   </style>
 </head>
 <body>
   <!-- Welcome screen -->
   <div id="welcome-screen">
-    <h2>Welcome to Job Finder</h2>
+    <h2>🌍 Welcome to Global Inter-Connect Jobs</h2>
+    <p>Find remote and local opportunities worldwide.</p>
     <button id="viewJobsBtn">Get Started</button>
   </div>
 
   <!-- Job board -->
-  <div id="job-board">
-    <h2>Find Jobs</h2>
+  <div id="job-board" style="display:none;">
+    <h2>Job Listings</h2>
+
+    <!-- Country selector -->
+    <label for="country-select">Choose Country:</label>
+    <select id="country-select">
+      <option value="us" selected>United States</option>
+      <option value="gb">United Kingdom</option>
+      <option value="ca">Canada</option>
+      <option value="au">Australia</option>
+      <option value="de">Germany</option>
+      <option value="fr">France</option>
+      <option value="es">Spain</option>
+      <option value="it">Italy</option>
+      <option value="nl">Netherlands</option>
+      <option value="se">Sweden</option>
+      <option value="no">Norway</option>
+    </select>  
 
     <!-- Search bar -->
     <div id="search-bar">
@@ -84,46 +162,32 @@
 
     <!-- Search history -->
     <div id="search-history">
-      <strong>Recent searches:</strong>
-      <ul id="history-list"></ul>
+      <strong>Recent Searches:</strong>
+      <div id="history-list"></div>
     </div>
 
-    <!-- Country selector -->
-    <div id="country-select-container">
-      <label for="country-select">Choose a country:</label>
-      <select id="country-select">
-        <option value="us">United States</option>
-        <option value="gb">United Kingdom</option>
-        <option value="ca">Canada</option>
-        <option value="de">Germany</option>
-        <option value="fr">France</option>
-        <option value="au">Australia</option>
-        <option value="in">India</option>
-        <option value="nl">Netherlands</option>
-        <option value="sg">Singapore</option>
-        <option value="br">Brazil</option>
-        <option value="za">South Africa</option>
-      </select>
+    <!-- Loading message -->
+    <div id="loading-message" style="display:none;">Searching jobs...</div>
+
+    <!-- Job list -->
+    <div id="job-list">
+      <h3>🌐 Remote Jobs</h3>
+      <div id="remote-jobs"></div>
+      <h3>📍 Local Jobs</h3>
+      <div id="local-jobs"></div>
     </div>
-
-    <!-- Remote jobs -->
-    <h3>Remote Jobs</h3>
-    <div id="remote-jobs"></div>
-
-    <!-- Local jobs -->
-    <h3>Local Jobs</h3>
-    <div id="local-jobs"></div>
 
     <!-- Saved jobs -->
-    <h3>Saved Jobs</h3>
-    <div id="saved-jobs"></div>
-    <div id="saved-jobs-counter">0/4 this month</div>
+    <div id="saved-jobs-section">
+      <h3>💾 Saved Jobs (<span id="saved-jobs-counter">0/4 this month</span>)</h3>
+      <div id="saved-jobs-list"></div>
+    </div>
   </div>
 
-  <!-- Modal for job details -->
+  <!-- Job Modal -->
   <div id="job-modal" class="modal">
     <div class="modal-content">
-      <span class="close">&times;</span>
+      <span class="close-btn">&times;</span>
       <div id="modal-body"></div>
     </div>
   </div>
@@ -131,6 +195,9 @@
   <script src="popup.js"></script>
 </body>
 </html>
+
+
+
 
 
 
