Add clear history functionality: implement button to clear search history and update UI accordingly

--- a/popup.html
+++ b/popup.html
@@ -184,11 +184,12 @@
       <button id="search-btn">Search</button>
     </div>
 
-    <!-- Search history -->
-    <div id="search-history">
-      <strong>Recent Searches:</strong>
-      <div id="history-list"></div>
-    </div>
+   <div id="search-history">
+  <strong>Recent Searches:</strong>
+  <div id="history-list"></div>
+  <button id="clear-history-btn" style="margin-top: 5px; font-size: 12px;">Clear History</button>
+</div>
+
 
     <!-- Loading message -->
     <div id="loading-message" style="display:none;">Searching jobs...</div>
