Refactor popup styles: adjust button dimensions, enhance job display layout, and add new badge style for warnings

--- a/popup.html
+++ b/popup.html
@@ -128,6 +128,7 @@
     .badge-parttime { background: #ffc107; color: #212529; }
     .badge-contract { background: #6f42c1; }
     .badge-new { background: #17a2b8; }
+    .badge-warning { background: #fd7e14; }
 
     /* Search history */
     #search-history {
@@ -265,9 +266,12 @@
     </div>
   </div>
 
+  <!-- Upgrade Modal will be injected by JS -->
+
   <script src="popup.js"></script>
 </body>
 </html>
+
 
 
 
